--- a/Navigating the Night Sky.ipynb
+++ b/Navigating the Night Sky.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://maia.usno.navy.mil/ser7/finals2000A.all [Done]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -12,11 +20,12 @@
     "from astropy.time import Time\n",
     "from astropy.coordinates import SkyCoord\n",
     "import pytz\n",
-    "import astropy\n",
+    "from astropy import *\n",
     "import pandas as pd\n",
-    "\n",
-    "from astroplan import Observer, FixedTarget\n",
+    "from astropy import units as u\n",
+    "from astroplan import *\n",
     "from astroplan import download_IERS_A\n",
+    "from astropy.table import Table\n",
     "\n",
     "download_IERS_A()\n",
     "\n"
@@ -56,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = planet_table = pd.read_csv('data2.csv')"
+    "data2 = pd.read_csv('data2.csv')\n"
    ]
   },
   {
@@ -67,22 +76,42 @@
    "source": [
     "#removing data without a name\n",
     "#Couldn't get mask to work\n",
-    "mask = np.where(isinstance(data['Name'],str))\n",
+    "mask = np.where(isinstance(data2['Name'],str))\n",
     "mask\n",
     "#Made my own mask since I couldn't get the one to work\n",
     "othermask = list()\n",
-    "for i in range(len(data['Name'])):\n",
-    "    if(isinstance(data['Name'][i],str)):\n",
+    "for i in range(len(data2['Name'])):\n",
+    "    if(isinstance(data2['Name'][i],str)):\n",
     "        othermask.append(True)\n",
     "    else:\n",
     "        othermask.append(False)\n",
-    "data2 = data[othermask]\n",
-    "data2 = data2.reset_index()"
+    "data = data2[othermask]\n",
+    "data = data.reset_index()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['Name']) # answer 39"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1077,14 +1106,24 @@
        "38       delta_Eri  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data2['Name']) # answer 39\n",
-    "data2"
+    "#Dates will be October 15th through the 30th\n",
+    "#Find which objects will be visible\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moon Phases\n",
+    "\n",
+    "Used the internet as a source for the moon: https://www.calendar-12.com/moon_calendar/2019/october"
    ]
   },
   {
@@ -1093,6 +1132,333 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observation Capability\n",
+    "\n",
+    "For October 15-30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Time object: scale='utc' format='iso' value=2019-10-15 00:00:00.000>"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting a list of dates from the 15th of October and ending on the 30th\n",
+    "dates = list()\n",
+    "for i in range(15,31):\n",
+    "    date = \"2019-10-\" + str(i) + \" 00:00:00\"\n",
+    "    item = Time(date,scale='utc')\n",
+    "    dates.append(item)\n",
+    "\n",
+    "dates[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Initial Objects\n",
+    "my_targets = list()\n",
+    "\n",
+    "for i in range(len(data[\"Name\"])):\n",
+    "    #Getting coords for each target\n",
+    "    coords = SkyCoord(data['ra (deg)'][i]*u.deg, \n",
+    "                      data['dec (deg)'][i]*u.deg,\n",
+    "                      frame='icrs')\n",
+    "    \n",
+    "    # Getting all the targets added to a list\n",
+    "    my_targets.append(FixedTarget(name=data[\"Name\"][i], coord=coords))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_range = Time([\"2019-10-15 06:00\", \"2019-10-30 12:00\"])\n",
+    "\n",
+    "con = [AltitudeConstraint(10*u.deg, 80*u.deg),\n",
+    "AirmassConstraint(2), AtNightConstraint.twilight_civil(),MoonIlluminationConstraint(0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=39&gt;\n",
+       "<table id=\"table140433599093560\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>target name</th><th>ever observable</th><th>always observable</th><th>fraction of time observable</th></tr></thead>\n",
+       "<thead><tr><th>str14</th><th>bool</th><th>bool</th><th>float64</th></tr></thead>\n",
+       "<tr><td>alpha_Cen_C</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>alpha^2_Cen</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>alpha^1_Cen</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>Barnard&apos;s_star</td><td>True</td><td>False</td><td>0.07923497267759563</td></tr>\n",
+       "<tr><td>alpha_CMa</td><td>True</td><td>False</td><td>0.14344262295081966</td></tr>\n",
+       "<tr><td>epsilon_Eri</td><td>True</td><td>False</td><td>0.2581967213114754</td></tr>\n",
+       "<tr><td>61_Cyg_A</td><td>True</td><td>False</td><td>0.21174863387978143</td></tr>\n",
+       "<tr><td>alpha_CMi</td><td>True</td><td>False</td><td>0.16939890710382513</td></tr>\n",
+       "<tr><td>61_Cyg_B</td><td>True</td><td>False</td><td>0.21174863387978143</td></tr>\n",
+       "<tr><td>epsilon_Ind</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>pi^3_Ori</td><td>True</td><td>False</td><td>0.296448087431694</td></tr>\n",
+       "<tr><td>chi_Dra</td><td>True</td><td>False</td><td>0.20218579234972678</td></tr>\n",
+       "<tr><td>p_Eri</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>beta_CVn</td><td>True</td><td>False</td><td>0.020491803278688523</td></tr>\n",
+       "<tr><td>mu_Her</td><td>True</td><td>False</td><td>0.1092896174863388</td></tr>\n",
+       "<tr><td>61_Vir</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>zeta_Tuc</td><td>False</td><td>False</td><td>0.0</td></tr>\n",
+       "<tr><td>chi^1_Ori</td><td>True</td><td>False</td><td>0.273224043715847</td></tr>\n",
+       "<tr><td>gamma_Lep</td><td>True</td><td>False</td><td>0.13114754098360656</td></tr>\n",
+       "<tr><td>delta_Eri</td><td>True</td><td>False</td><td>0.2540983606557377</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=39>\n",
+       " target name   ever observable always observable fraction of time observable\n",
+       "    str14            bool             bool                 float64          \n",
+       "-------------- --------------- ----------------- ---------------------------\n",
+       "   alpha_Cen_C           False             False                         0.0\n",
+       "   alpha^2_Cen           False             False                         0.0\n",
+       "   alpha^1_Cen           False             False                         0.0\n",
+       "Barnard's_star            True             False         0.07923497267759563\n",
+       "     alpha_CMa            True             False         0.14344262295081966\n",
+       "   epsilon_Eri            True             False          0.2581967213114754\n",
+       "      61_Cyg_A            True             False         0.21174863387978143\n",
+       "     alpha_CMi            True             False         0.16939890710382513\n",
+       "      61_Cyg_B            True             False         0.21174863387978143\n",
+       "   epsilon_Ind           False             False                         0.0\n",
+       "           ...             ...               ...                         ...\n",
+       "      pi^3_Ori            True             False           0.296448087431694\n",
+       "       chi_Dra            True             False         0.20218579234972678\n",
+       "         p_Eri           False             False                         0.0\n",
+       "      beta_CVn            True             False        0.020491803278688523\n",
+       "        mu_Her            True             False          0.1092896174863388\n",
+       "        61_Vir           False             False                         0.0\n",
+       "      zeta_Tuc           False             False                         0.0\n",
+       "     chi^1_Ori            True             False           0.273224043715847\n",
+       "     gamma_Lep            True             False         0.13114754098360656\n",
+       "     delta_Eri            True             False          0.2540983606557377"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observability_table(observer=observatory,\n",
+    "                   constraints=con,\n",
+    "                   targets=my_targets,time_range=time_range)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Subset of 10 objects\n",
+    "small_targets = list()\n",
+    "small_targets.append(my_targets[38])\n",
+    "small_targets.append(my_targets[37])\n",
+    "small_targets.append(my_targets[36])\n",
+    "small_targets.append(my_targets[33])\n",
+    "small_targets.append(my_targets[3])\n",
+    "small_targets.append(my_targets[4])\n",
+    "small_targets.append(my_targets[5])\n",
+    "small_targets.append(my_targets[6])\n",
+    "small_targets.append(my_targets[7])\n",
+    "small_targets.append(my_targets[8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=10&gt;\n",
+       "<table id=\"table140433599230584\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>target name</th><th>ever observable</th><th>always observable</th><th>fraction of time observable</th></tr></thead>\n",
+       "<thead><tr><th>str14</th><th>bool</th><th>bool</th><th>float64</th></tr></thead>\n",
+       "<tr><td>delta_Eri</td><td>True</td><td>False</td><td>0.14344262295081966</td></tr>\n",
+       "<tr><td>gamma_Lep</td><td>True</td><td>False</td><td>0.08879781420765027</td></tr>\n",
+       "<tr><td>chi^1_Ori</td><td>True</td><td>False</td><td>0.16530054644808742</td></tr>\n",
+       "<tr><td>mu_Her</td><td>True</td><td>False</td><td>0.015027322404371584</td></tr>\n",
+       "<tr><td>Barnard&apos;s_star</td><td>True</td><td>False</td><td>0.00819672131147541</td></tr>\n",
+       "<tr><td>alpha_CMa</td><td>True</td><td>False</td><td>0.09699453551912568</td></tr>\n",
+       "<tr><td>epsilon_Eri</td><td>True</td><td>False</td><td>0.14207650273224043</td></tr>\n",
+       "<tr><td>61_Cyg_A</td><td>True</td><td>False</td><td>0.06557377049180328</td></tr>\n",
+       "<tr><td>alpha_CMi</td><td>True</td><td>False</td><td>0.11202185792349727</td></tr>\n",
+       "<tr><td>61_Cyg_B</td><td>True</td><td>False</td><td>0.06557377049180328</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=10>\n",
+       " target name   ever observable always observable fraction of time observable\n",
+       "    str14            bool             bool                 float64          \n",
+       "-------------- --------------- ----------------- ---------------------------\n",
+       "     delta_Eri            True             False         0.14344262295081966\n",
+       "     gamma_Lep            True             False         0.08879781420765027\n",
+       "     chi^1_Ori            True             False         0.16530054644808742\n",
+       "        mu_Her            True             False        0.015027322404371584\n",
+       "Barnard's_star            True             False         0.00819672131147541\n",
+       "     alpha_CMa            True             False         0.09699453551912568\n",
+       "   epsilon_Eri            True             False         0.14207650273224043\n",
+       "      61_Cyg_A            True             False         0.06557377049180328\n",
+       "     alpha_CMi            True             False         0.11202185792349727\n",
+       "      61_Cyg_B            True             False         0.06557377049180328"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observability_table(observer=observatory,\n",
+    "                   constraints=con,\n",
+    "                   targets=small_targets,time_range=time_range)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observation Capability\n",
+    "\n",
+    "For November 15-30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_range_nov = Time([\"2019-10-15 06:00\", \"2019-10-30 12:00\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=10&gt;\n",
+       "<table id=\"table140433599763624\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>target name</th><th>ever observable</th><th>always observable</th><th>fraction of time observable</th></tr></thead>\n",
+       "<thead><tr><th>str14</th><th>bool</th><th>bool</th><th>float64</th></tr></thead>\n",
+       "<tr><td>delta_Eri</td><td>True</td><td>False</td><td>0.14344262295081966</td></tr>\n",
+       "<tr><td>gamma_Lep</td><td>True</td><td>False</td><td>0.08879781420765027</td></tr>\n",
+       "<tr><td>chi^1_Ori</td><td>True</td><td>False</td><td>0.16530054644808742</td></tr>\n",
+       "<tr><td>mu_Her</td><td>True</td><td>False</td><td>0.015027322404371584</td></tr>\n",
+       "<tr><td>Barnard&apos;s_star</td><td>True</td><td>False</td><td>0.00819672131147541</td></tr>\n",
+       "<tr><td>alpha_CMa</td><td>True</td><td>False</td><td>0.09699453551912568</td></tr>\n",
+       "<tr><td>epsilon_Eri</td><td>True</td><td>False</td><td>0.14207650273224043</td></tr>\n",
+       "<tr><td>61_Cyg_A</td><td>True</td><td>False</td><td>0.06557377049180328</td></tr>\n",
+       "<tr><td>alpha_CMi</td><td>True</td><td>False</td><td>0.11202185792349727</td></tr>\n",
+       "<tr><td>61_Cyg_B</td><td>True</td><td>False</td><td>0.06557377049180328</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=10>\n",
+       " target name   ever observable always observable fraction of time observable\n",
+       "    str14            bool             bool                 float64          \n",
+       "-------------- --------------- ----------------- ---------------------------\n",
+       "     delta_Eri            True             False         0.14344262295081966\n",
+       "     gamma_Lep            True             False         0.08879781420765027\n",
+       "     chi^1_Ori            True             False         0.16530054644808742\n",
+       "        mu_Her            True             False        0.015027322404371584\n",
+       "Barnard's_star            True             False         0.00819672131147541\n",
+       "     alpha_CMa            True             False         0.09699453551912568\n",
+       "   epsilon_Eri            True             False         0.14207650273224043\n",
+       "      61_Cyg_A            True             False         0.06557377049180328\n",
+       "     alpha_CMi            True             False         0.11202185792349727\n",
+       "      61_Cyg_B            True             False         0.06557377049180328"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observability_table(observer=observatory,\n",
+    "                   constraints=con,\n",
+    "                   targets=small_targets,time_range=time_range_nov)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1118,7 +1484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
